--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div id="user-pic">
-            <img src="../images/whitesolidbgpic.JPG" alt="User Image">
+            <img src="../images/whitesolidbgpic.jpg" alt="User Image">
 
         </div>
     </main>
